force-app/main/default/objects/SIOC__PersonInfo__c/SIOC__PersonInfo__c.object-meta.xml
<CustomObject>
    <label>Person Information</label>
    <nameField>
        <label>Person Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>