force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__DOB__c.field-meta.xml
<CustomField>
    <fullName>SIOC__DOB__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>