force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__Email__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>