force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__FirstName__c.field-meta.xml
<CustomField>
    <fullName>SIOC__FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>