force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__FullName__c.field-meta.xml
<CustomField>
    <fullName>SIOC__FullName__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>