force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__LastName__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>