force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>SIOC__MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>