force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__Nationality__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Nationality__c</fullName>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>