force-app/main/default/objects/SIOC__PersonInfo__c/fields/SIOC__VendorId__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorId__c</fullName>
    <label>Vendor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>